<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Datové Schránky</string>
    <string name="enter">Vstoupit</string>
    <string name="ok">OK</string>
    <string name="ok_thanks">OK, díky</string>
    <string name="password">Heslo</string>
    <string name="password2">Heslo:</string>
    <string name="wrong_password">Špatné heslo, zkuste jiné...</string>
    <string name="databoxes">Datové schránky</string>
    <string name="databox">Datová schránka</string>
    <string name="settings">Nastavení</string>
    <string name="help">Nápověda</string>
    <string name="add_attachment">Přidat přílohu</string>
    <string name="choose_picture">Vyberte fotku</string>
    <string name="new_message">Nová zpráva</string>
    <string name="no_databoxes_defined">Nemáte definovány žádné datové schránky. Datovou schránku lze přidat v nastavení aplikace.</string>
    <string name="set_password">Nastavit heslo</string>
    <string name="click_to_add_new_db">Kliknutím zde přidáte novou datovou schránku</string>
    <string name="person_id">ID osoby:</string>
    <string name="box_id">ID schránky:</string>
    <string name="box_name">Jméno schránky:</string>
    <string name="set_password_desc">Zadejte heslo pro vstup do aplikace. Pokud heslo nastavíte prázdné nebude po vás při vstupu do aplikace vyžadováno.</string>
    <string name="password_desc">Zadejte heslo pro vstup do aplikace.</string>
    
    <string name="created_by">Vytvořil APK SOFT s.r.o.</string>
    <string name="cancel">Storno</string>
    <string name="set">Nastavit</string>
    <string name="save">Uložit</string>
    <string name="continue_">Pokračovat</string>
    <string name="new_password_set">Nové heslo pro vstup do aplikace bylo nastaveno.</string>
    <string name="password_not_required">Heslo pro vstup do aplikace bylo vypnuto.</string>
    <string name="new_box_access">Nový přístup do datové schránky</string>
    <string name="accessing_db">Probíhá komunikace s datovou schránkou...</string>
    <string name="comm_error">Při komunikaci s datovou schránkou došlo k chybě. Zkontolujte prosím připojení k internetu a přihlašovací údaje k datové schránce.</string>
    <string name="error_unknown_host">Při komunikaci s datovou schránkou došlo k chybě. Zkontolujte prosím připojení k internetu. Server nebyl nalezen.</string>
    <string name="error_ssl_exception">Při komunikaci s datovou schránkou došlo k chybě. Server nemá důvěryhodný certifikát.</string>
    <string name="error_keystore_exception">Došlo k chybě při načítání certifikátů.</string>
    <string name="error_access_denied">Při komunikaci s datovou schránkou došlo k chybě. Přihlašovací údaje k datové schránce nejsou platné.</string>
    <string name="unknown_error">Nastala neznámá chyba: %s</string>
    
    <string name="password_expires">Platnost hesla datové schránky vyprší: %s</string>
    <string name="password_expires2">Platnost hesla do:</string>
    <string name="password_expires_soon">Platnost hesla brzy vyprší</string>
    <string name="password_expires3">Platnost hesla datové schránky %1$s vyprší: %2$s. Přihlašte se na stránky http://www.mojedatovaschranka.cz/ pro jeho změnu.</string>
    
    <string name="new_databox_added">Nová datová schránka byla přidána.</string>
    <string name="databox_saved">Změněné přihlašovací údaje datové schránky byly uloženy.</string>
    <string name="databox_removed">Datová schránka byla odebrána.</string>
    <string name="remove_databox">Odebrat</string>
    <string name="edit_databox">Upravit</string>
    
    <string name="delivered_messages">Dodané zprávy</string>
    <string name="sent_messages">Odeslané zprávy</string>
    <string name="send_message">Odeslat zprávu</string>
    
    
    <string name="delivered">Dodáno:</string>
    <string name="handin">Doručeno:</string>
    <string name="state">Stav:</string>
    <string name="concern">Věc:</string>
    <string name="sender">Odesílatel:</string>
    <string name="sender2">Odesílatel</string>
    <string name="recipient">Příjemce:</string>
    <string name="recipient2">Příjemce</string>
    <string name="common_info">Obecné informace</string>
    <string name="attachements">Přílohy</string>
    <string name="message_id">ID zprávy:</string>
    <string name="box_type">Typ schránky:</string>
    
    <string name="delivered_message">Doručená datová zpráva</string>
    <string name="sent_message">Odeslaná datová zpráva</string>
    
    <string name="name">Název:</string>
    <string name="warrant">Zmocnění:</string>
    <string name="paragraph">odstavec</string>
    <string name="character">písmeno</string>
    <string name="our_cj">Naše č.j:</string>
    <string name="our_spzn">Naše sp.zn:</string>
    <string name="your_cj">Vaše č.j:</string>
    <string name="your_spzn">Vaše sp.zn:</string>
    <string name="to_hands_name">K rukám:</string>
    <string name="to_hands_enabled">Do vl.rukou:</string>
    <string name="fiction_allow">Doručit fikcí povoleno:</string>
    <string name="yes">ano</string>
    <string name="no">ne</string>
    <string name="search_recipient">Vyhledání příjemce</string>
    <string name="search">Vyhledat</string>
    <string name="name_or_boxid">Název:</string>
    <string name="no_message">Zádné zprávy.</string>
    <string name="could_not_read_messages_retry">Seznam zpráv se nepodařilo stáhnout, kliknutím zde zopakujete pokus.</string>
    <string name="save_attachment_on_sdcard">Uložit přílohu na SD kartu</string>
    <string name="save_attachment_on_sdcard_and_open">Uložit přílohu na SD kartu a Otevřít</string>
    <string name="choose_action">Vyberte akci</string>
    <string name="saving_attachement">Ukládám přílohu</string>
    <string name="could_not_save_attachement">Přílohu se nepodařilo uložit</string>
    <string name="attachment_has_been_saved_to">Příloha %1$s byla uložena do %2$s.</string>
    <string name="could_not_openattachment">Přílohu %1$s typu %2$s se nepodařilo otevřít. Pravděpodobně vám chybí aplikace na prohlížení tohoto typu souboru.</string>
    <string name="please_wait">Prosím čekejte...</string>
    <string name="help_text">
    Aplikace Datové schránky pro Android není dokonalá.\n
    Své nápady na zlepšení nebo stížnosti na chyby posílejte na karel.kyovsky@apksoft.eu.\n
    V případě problémů nezapomeňte uvést přesný typ vašeho telefonu.\n
    \n
    Funkce o kterých možná nevíte:\n
    - Aplikace obsahuje též widget kontrolující schránky každou hodinu a upozorňující na došlé zprávy.\n
      Widget lze umístit standartním způsobem na plochu.\n
    - Aplikace sama hlídá platnost hesla vašich schránek a upozorní vás 20 dní před jeho expirací.\n 
    \n
    Funknce které jsou v plánu:\n
    1. Odesílání zpráv\n
    2. Přidání fotografie k odchozí zprávě jako přílohu\n
    3. Ověřování zpráv \n
    4. Zobrazení příloh u odeslaných zpráv\n
    \n
    Opensource:\n
    - Tato aplikace byla uvolněna jako opensource pod licencí GPL3.\n
    - Stránky aplikace: http://wiki.github.com/b00lean/datoveschranky/\n
    \n
    Bezpečnost a soukromí:\n
    - Vaše identifikační údaje a hesla spojená s touto aplikací jsou uložená pouze na tomto zařízení a jsou přístupná pouze této aplikaci.\n
    Poděkování:\n
    - Václavu Roseckému za knihovnu JAVA_ISDS, kterou tato aplikace využívá.\n
    - AbcLinuxu.cz za iniciativu vývoje opensource řešení pro datové schránky.\n
    - Ubuntu za to že nemusíme používat MS Windows.\n 
    - A všem dalším sponzorům opensource řešení.\n
    \n
    </string>
    
    
    
</resources>
