<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:background="#ffffff">





<TextView android:layout_height="wrap_content" android:textStyle="bold" android:id="@+id/lblDatabox" android:text="@string/databox" android:textColor="#ffffff" android:layout_width="fill_parent" android:textSize="20dip" android:paddingTop="10dip" android:paddingBottom="10dip" android:background="#fcb813" android:gravity="center_horizontal"></TextView>
<TextView android:layout_height="wrap_content" android:textStyle="bold" android:paddingLeft="10dip" android:id="@+id/txtBoxName" android:background="#fcb813" android:layout_width="fill_parent" android:textColor="#ffffff" android:gravity="center_horizontal"></TextView>
<LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:orientation="vertical" android:layout_width="fill_parent" android:layout_marginTop="5dip" android:layout_marginRight="5dip" android:layout_marginLeft="5dip">
	<Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/btnDeliveredMessages" android:drawableTop="@drawable/delivered" android:text="@string/delivered_messages" android:drawablePadding="10dip" android:paddingBottom="10dip" android:paddingTop="10dip"></Button>
	<Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/btnSentMessages" android:text="@string/sent_messages" android:drawableTop="@drawable/sent" android:drawablePadding="10dip" android:paddingTop="10dip" android:layout_marginTop="15dip" android:paddingBottom="5dip"></Button>
	<Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/btnSendMessage" android:text="@string/send_message" android:drawableTop="@drawable/compose" android:drawablePadding="10dip" android:paddingTop="10dip" android:layout_marginTop="15dip" android:paddingBottom="5dip"></Button>
</LinearLayout>




</LinearLayout>
