<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/commentViewX" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:orientation="vertical" 
	>
	
	
	
	
	

<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/set_password_desc" android:id="@+id/lblSetPassword" android:layout_marginLeft="10dip" android:layout_marginRight="10dip" android:layout_marginTop="5dip" android:gravity="top"></TextView>
<EditText android:text="" android:password="true" android:id="@+id/edtPassword" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dip" android:layout_marginRight="10dip" android:layout_marginTop="5dip" android:gravity="top"></EditText>
<LinearLayout 
	android:id="@+id/commentView2" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:orientation="horizontal" 
	android:layout_marginLeft="10dip" android:layout_marginRight="10dip"
	>
<Button android:text="@string/cancel" android:id="@+id/btnCancel" android:layout_width="fill_parent" android:layout_weight="1" android:layout_height="wrap_content" ></Button>
<Button android:text="@string/set" android:id="@+id/btnSet" android:layout_width="wrap_content"  android:layout_height="wrap_content" android:minWidth="100dip"></Button>
</LinearLayout>

</LinearLayout>