<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/commentViewX" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:orientation="vertical" 
	>
	
	
	
	
	



<TableLayout android:id="@+id/TableLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent" android:stretchColumns="1">
<TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content" android:layout_height="wrap_content">
<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/lblUsername" android:text="@string/person_id" android:layout_marginLeft="10dip" android:layout_marginTop="5dip"></TextView>
<EditText android:text="" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dip" android:layout_marginRight="10dip" android:layout_marginTop="5dip" android:gravity="top" android:id="@+id/edtPersonID"></EditText></TableRow>
<TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dip" android:layout_marginTop="5dip" android:id="@+id/lblPassword" android:text="@string/password2"></TextView><EditText android:text="" android:password="true" android:id="@+id/edtPassword" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dip" android:layout_marginRight="10dip" android:layout_marginTop="5dip" android:gravity="top"></EditText></TableRow></TableLayout><LinearLayout 
	android:id="@+id/commentView2" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:orientation="horizontal" 
	android:layout_marginLeft="10dip" android:layout_marginRight="10dip"
	>
<Button android:text="@string/cancel" android:id="@+id/btnCancel" android:layout_width="fill_parent" android:layout_weight="1" android:layout_height="wrap_content" ></Button>
<Button android:layout_width="wrap_content"  android:layout_height="wrap_content" android:minWidth="100dip" android:id="@+id/btnSave" android:text="@string/save"></Button>

</LinearLayout>




</LinearLayout>