<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="wrap_content" android:layout_width="fill_parent"
  android:id="@+id/row_db"
  >


<TableLayout android:id="@+id/TableLayout03" android:layout_width="wrap_content" android:layout_height="wrap_content">
	<TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content" android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="#000000" android:id="@+id/lblBoxName" android:text="@string/box_name"></TextView>
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="#000000" android:textStyle="bold" android:id="@+id/txtBoxName"></TextView>
	</TableRow>
	<TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content" android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="#000000" android:text="@string/person_id" android:id="@+id/lblPersonID"></TextView>
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="#000000" android:id="@+id/txtPersonID"></TextView>
	</TableRow>
	<TableRow android:id="@+id/TableRow03" android:layout_width="wrap_content" android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="#000000" android:id="@+id/lblBoxID" android:text="@string/box_id"></TextView>
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="#000000" android:id="@+id/txtBoxID"></TextView>
	</TableRow>
	<TableRow android:id="@+id/TableRow04" android:layout_width="wrap_content" android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="#000000" android:id="@+id/lblPasswordExpires" android:text="@string/password_expires2" android:paddingRight="5dip"></TextView>
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="#000000" android:id="@+id/txtPasswordExpires"></TextView>
	</TableRow>
	
</TableLayout>


</LinearLayout>
